--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Merienda+One" rel="stylesheet">
-	<script type="text/javascript" src="code.Js"></script>
+	<script type="text/javascript" src="code.js"></script>
 </head>
 <body>
 	<div class="content">
